samples/35-command-and-args.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: ubuntu
      command: ["sleep"]
      args: ["10"]
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
