samples/38-env-variables.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
