samples/43-inject-config-map.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: ubuntu
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      # Inject all variables defined in config map
      volumes:
        - name: app-config-volume # Name of volume
          configMap:
            name: app-config # Name of config map
