samples/45-security-context.yml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  # Adds security context for the pod
  securityContext:
    runAsUser: 1000
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      # Adds security context for the container
      securityContext:
        runAsUser: 1000
        # Only supported at the container level NOT at the pod level
        capabilities:
          add: ["MAC_ADMIN"]
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
