samples/46-inject-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: ubuntu
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      # Inject all values defined in secret
      volumes:
        - name: app-secret-volume # Name of volume
          secret:
            secretName: app-secret # Name of secret
