samples/47-service-account.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
spec:
  serviceAccount: my-service-account
  automountServiceAccountToken: false
  containers:
    - name: myapp
      image: myapp
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
