samples/59-toleration.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
  # Toleration values should map to a node taint.
  tolerations:
    # Values must be encoded in double quotes.
    - key: "app"
      operator: "Equal"
      value: "blue"
      effect: "NoSchedule"
