samples/62-node-selector.yml
apiVersion: v1
kind: Pod
spec:
  containers:
    - name: data-processor
      image: data-processor
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
  nodeSelector:
    size: Large
