samples/70-multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
    - name: myapp
      image: myapp
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080

    - name: log-agent
      image: log-agent
      resources:
        limits:
          memory: "128Mi"
          cpu: "0.5"
