samples/73-readiness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    name: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080
      # HTTP Readiness Probe
      readinessProbe:
        httpGet:
          path: /api/ready
          port: 8080
        initialDelaySeconds: 10 # Delay before starting readiness probe
        periodSeconds: 5 # How often to probe?
        failureThreshold: 8 # Consecutive failures to be considered failed

      # TCP Readiness Probe
      # readinessProbe:
      #   tcpSocket:
      #     port: 3306

      # Exec command
      # readinessProbe:
      #   exec:
      #     command:
      #       - cat
      #       - /app/is_ready
