samples/118-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
