samples/93-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - port: 80 # Required
      targetPort: 80
      nodePort: 30008
  selector:
    app: myapp
    type: frontend
