samples/94-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 80 # Required
      targetPort: 80
  selector:
    app: myapp
    type: backend
