samples/97-ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: "my-online-store.com"
    http:
      paths:
      - path: "/wear"
        backend:
          serviceName: wear-service
          servicePort: 80
      - path: "/watch"
        backend:
          serviceName: watch-service
          servicePort: 80
