samples/103-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  # Allow ingress from Rule 1 OR Rule 2
  ingress:
    - from:
        - podSelector: # Rule 1 enforces pod AND namespace selector
            matchLabels:
              name: api-pod
          namespaceSelector: # No hyphen at start. This is not a separate rule.
            matchLabels:
              name: prod
        # Rule 2
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
